crates/language-tests/tests/parsing/errors/define_index_without_fields.surql
/**
[test]

[test.results]
parsing-error = """
Expected at least one column - Use FIELDS to define columns
"""

*/
DEFINE INDEX a ON b;
